--- a/style.css
+++ b/style.css
@@ -11,19 +11,13 @@ body{
   width: 100%;
   height: 110vh;
   background-repeat: no-repeat;
-
-
-
 }
-
 .ss {
 
   position: relative;
   padding: 14px 33px;
   color: rgb(90, 87, 87);
-
 }
-
 .cc {
 
   margin-left: 51px;
@@ -31,10 +25,8 @@ body{
   position: relative;
   bottom: 67px;
   text-align: justify;
-
   color: rgb(95, 91, 91);
   font-size: larger;
-
 }
 
 #pw {
@@ -44,28 +36,19 @@ body{
   width: 100%;
   height: 85vh;
   background-repeat: no-repeat;
-
-
-
-
-
-
 }
-
 .first {
-
-
-
-  background-color: rgba(17, 1, 1, 0.681);
+    background-color: rgba(17, 1, 1, 0.681);
   height: 0px;
   width: 248px;
   color: rgb(238, 243, 247);
   position: relative;
-  left: 687px;
+  left: 83vh;
   bottom: 1508px;
   padding: 11px;
   text-align: center;
   padding: 51px;
+  
 }
 div h1 {
   text-align: center;
@@ -84,7 +67,7 @@ div h1 {
   width: 248px;
   color: rgb(238, 243, 247);
   position: relative;
-  left: 707px;
+  left: 83vh;
   bottom: 647px;
   text-align: center;
   padding: 34px;
@@ -149,7 +132,7 @@ div h1 {
   position: relative;
   height: 56px;
   width: 336px;
-  left: 712px;
+  left: 83vh;
   bottom: 377px;
   text-align: center;
   color: aliceblue;
@@ -216,7 +199,7 @@ div h1 {
   color: aliceblue;
   padding: 15px 4px;
   bottom: 357px;
-  left: 744px;
+  left: 83vh;
   text-align: center;
 }
 .ll{
